// Copyright 2020 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package tests.bodymappying.message.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/go-leo/gors/example/api/tests/bodymapping/v1;bodymapping";

service Messaging {
    rpc UpdateMessage(Message) returns(Message) {
        option(google.api.http) = {
            patch: "/v1/messages/{message_id}"
            body: "text"
        };
    }

    rpc DoAny(google.protobuf.Empty) returns (google.protobuf.Empty) {
        option(google.api.http) = {
            post: "/v1/messages/any"
            body: "*"
        };
    }
}
message Message {
    string message_id = 1;
    string text = 2;
}
